# control-points-opengl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.cache/clangd/index/: main.cpp.FD0B8AD12306A408.idx
